// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button/Icon Button Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Icon Button
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Icon Button Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Icon Button
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Outline Button Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Outline Button
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <button
        className="sc-ifAKCX cFbRBg"
        color="black"
        onClick={[Function]}
        size="small"
      >
        ButtonText
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Outline Button Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Outline Button
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX ghmRJL"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX iNvivt"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX gbvGAL"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX cFbRBg"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX hKHcOI"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX lhXmtI"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX gNzVzy"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX izUfQc"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX khGZql"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX cWkbTs"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX clPdpR"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX kZEvAF"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX kMtirW"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX sDNMD"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX cpIpBV"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX hdtFUF"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX iVJmKi"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX kytqoi"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX hapKxd"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX hsBLzX"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX fkrLkf"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX knscUz"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX izhjqu"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-ifAKCX Ubppl"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Solid Button Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Solid Button
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <button
        className="sc-EHOje BwgDR"
        color="black"
        onClick={[Function]}
        size="medium"
      >
        ButtonText
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Solid Button Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Solid Button
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje imYoqf"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje NMuqi"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje JGxxp"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kmrZQq"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje XuciL"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kZsnwB"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje WpunN"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kOMHid"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fhCXcN"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje cPQwpe"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje eDKVMZ"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ezMzgL"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jNolJN"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje cgjVxX"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje HAVDK"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje chuZgI"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje BwgDR"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kqbjhf"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iQHqUD"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje lpfJFb"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje hpWEYp"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje cqUEMJ"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fMIOXK"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje BDttZ"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fNiFyG"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bkbQxk"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kkgvUq"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ShTYv"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kLzcQF"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje cHiGYC"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jkEfvH"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bDvxkW"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jFngUN"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jLKhCw"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kcGVSS"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje PZDGc"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje edHVjd"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kKTLMP"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ckqIit"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jvxhKH"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kmvBrG"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iroMJs"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jWAAnH"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje eQvgha"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje cUyhoP"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje eZmMGT"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ZDgAR"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje OydaQ"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bjgZbQ"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje hGEJIM"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iQIeCJ"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bwaNKa"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje eGhHgw"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje gobxSx"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ezOCLw"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jxrKjN"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jRsDZu"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje hlWRoX"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jIKIQY"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jFsgMs"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje hzLiAK"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje gxLKsp"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bqzIHV"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje cVSVSi"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fIQruW"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bEzkWj"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iuPHGQ"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje gGJyJK"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bhixCV"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fNvPoj"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ZRRbB"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje eQRhGr"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje leDRdd"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fHuHkx"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje eBhfZu"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bSCwWm"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje lauhmR"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje AWfJc"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fxCuyW"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fynriV"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje edZFpt"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje gMqUBd"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje emAYLs"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jufWdk"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje GfLTk"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ebaElr"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bsIjQO"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje gLyBNW"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje hZnrhk"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje hOJSRC"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje dOQCet"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kDrEJf"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje klLJNw"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jrOBNu"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iUgpxI"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje gSMONP"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jjhZIs"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fBVtSS"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fVveOd"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ilIBTv"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje hohwdL"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje dLjkad"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje hfWmAC"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kqfDoU"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ffEoms"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje euslmv"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje gywKWH"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iPUEDR"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje biazFW"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje dTsAUy"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fRPqPb"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jaKlJP"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fflEDR"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kAJdqZ"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje KSBRJ"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje uwFkt"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jlxeNq"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bABiyd"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jQsRuk"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ichfLH"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje hSXXMp"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iIUSHC"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bjMraZ"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kTQJQw"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bqqTZU"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fyXfnZ"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje eOtKWA"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iigBpD"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje hHtlFR"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jieCia"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje eVeXOU"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje SLrAV"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ihQulm"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kCoffr"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje boIkrQ"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje eGNfWu"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ftlPPb"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje dMdhSX"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje cppwRe"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje uPcrS"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje eYDPOt"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje ivpKx"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje WTixJ"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje gUyqHH"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jupslU"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jkbEpc"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje HIUMW"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iPmtTF"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jTqbst"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje dyFAel"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bVAEES"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bErNfD"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje htfbHq"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje hTWEhk"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iWPjS"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje jIkYAD"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bwgxur"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje kIakAk"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bQebzi"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iqlPXh"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje bsisYi"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje gtdMfx"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje febzAU"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iVNScO"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje hoYMgG"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje cKGQNA"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje fxgdku"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <button
            className="sc-EHOje iZGwcq"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Wrapper Button Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Wrapper Button
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div
        className="sc-bZQynM cKagMV"
        onClick={[Function]}
      >
        Wrapped Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Wrapper Button Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Wrapper Button
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <div
            className="sc-bZQynM cKagMV"
          >
            WrappedText
          </div>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <div
            className="sc-bZQynM cKagMV"
          >
            <div>
              Wrapped DOM Node
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Card
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div
        className="sc-bZQynM cKagMV"
        onClick={[Function]}
      >
        <div
          className="sc-gzVnrw gQitqJ"
        >
          Card Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Card
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <div
            className="sc-bZQynM cKagMV"
            onClick={undefined}
          >
            <div
              className="sc-gzVnrw gQitqJ"
            >
              Card Content
            </div>
          </div>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <div
            className="sc-bZQynM cKagMV"
            onClick={undefined}
          >
            <div
              className="sc-gzVnrw gQitqJ"
            >
              <div>
                DOM Node
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <div
            className="sc-bZQynM cKagMV"
            onClick={undefined}
          >
            <div
              className="sc-gzVnrw aqJzB"
            >
              Card Content
            </div>
          </div>
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <div
            className="sc-bZQynM cKagMV"
            onClick={undefined}
          >
            <div
              className="sc-gzVnrw aqJzB"
            >
              <div>
                DOM Node
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Colors Colors 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Colors
      →  
    Colors
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div
        className="sc-gZMcBi dWPVKR"
      >
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            White
          </div>
          <div
            className="sc-VigVT bwThKl"
            color="#FFFFFF"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #FFFFFF
            </div>
          </div>
        </div>
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            Grey 5
          </div>
          <div
            className="sc-VigVT bZlQFt"
            color="#EDEFF2"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #EDEFF2
            </div>
          </div>
        </div>
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            Grey 4
          </div>
          <div
            className="sc-VigVT bXujMD"
            color="#E1E3E6"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #E1E3E6
            </div>
          </div>
        </div>
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            Grey 3
          </div>
          <div
            className="sc-VigVT dUalbM"
            color="#C1C3C6"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #C1C3C6
            </div>
          </div>
        </div>
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            Grey 2
          </div>
          <div
            className="sc-VigVT gCzvKC"
            color="#9B9B9B"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #9B9B9B
            </div>
          </div>
        </div>
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            Grey 1
          </div>
          <div
            className="sc-VigVT jfwYOg"
            color="#666666"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #666666
            </div>
          </div>
        </div>
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            Black
          </div>
          <div
            className="sc-VigVT jlJtIn"
            color="#303030"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #303030
            </div>
          </div>
        </div>
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            Primary Orange
          </div>
          <div
            className="sc-VigVT gldrmZ"
            color="#FFA700"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #FFA700
            </div>
          </div>
        </div>
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            Light Orange
          </div>
          <div
            className="sc-VigVT bCcHO"
            color="#FFBE00"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #FFBE00
            </div>
          </div>
        </div>
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            Dark Orange
          </div>
          <div
            className="sc-VigVT hvgRlJ"
            color="#FF8D00"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #FF8D00
            </div>
          </div>
        </div>
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            Primary Blue
          </div>
          <div
            className="sc-VigVT cpdmwh"
            color="#0075F7"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #0075F7
            </div>
          </div>
        </div>
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            Light Blue
          </div>
          <div
            className="sc-VigVT dWAZlq"
            color="#00CDFF"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #00CDFF
            </div>
          </div>
        </div>
        <div
          className="sc-gqjmRU iTRIKV"
        >
          <div
            className="sc-jTzLTM bLPztG"
          >
            Dark Blue
          </div>
          <div
            className="sc-VigVT YGUuV"
            color="#0E91FD"
          />
          <div
            className="sc-jTzLTM bLPztG"
          >
            <div
              className="sc-fjdhpX fdyCIz"
            >
              #0E91FD
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Colors Gradients 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Colors
      →  
    Gradients
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div
        className="sc-jzJRlG Jpdxv"
      >
        <div
          className="sc-cSHVUG hXOfen"
        >
          <div
            className="sc-chPdSV jTcLPo"
          >
            Primary
          </div>
          <div
            className="sc-kAzzGY gPwjif"
          />
          <div
            className="sc-chPdSV jTcLPo"
          >
            <div
              className="sc-kgoBCf kyMYkZ"
            >
              background: 
              linear-gradient(135deg, #00CDFF 0%, #0E91FD 100%)
            </div>
          </div>
        </div>
        <div
          className="sc-cSHVUG hXOfen"
        >
          <div
            className="sc-chPdSV jTcLPo"
          >
            Secondary
          </div>
          <div
            className="sc-kAzzGY hMPmfw"
          />
          <div
            className="sc-chPdSV jTcLPo"
          >
            <div
              className="sc-kgoBCf kyMYkZ"
            >
              background: 
              linear-gradient(135deg, #FFBE00 0%, #FF8D00 100%)
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Divider Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Divider
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div
        className="sc-htoDjs dLmoQk"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Divider Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Divider
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <div
            className="sc-htoDjs dLmoQk"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Icon
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Icon
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Image/Header Image Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Image/Header Image
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div
        className="sc-iwsKbI ilpCES"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Image/Header Image Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Image/Header Image
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <div
            className="sc-iwsKbI ilpCES"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Image/Profile Image Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Image/Profile Image
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <img
        className="sc-dnqmqq gjfFIr"
        shape="square"
        size="small"
        src="https://placehold.it/192/ccc/606060&&text=G"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Image/Profile Image Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Image/Profile Image
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq cFfIQZ"
            shape="square"
            size="small"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq dHrass"
            shape="square"
            size="small"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq iGcDZb"
            shape="square"
            size="small"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq gjfFIr"
            shape="square"
            size="small"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq ibOgAf"
            shape="circle"
            size="small"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq cMOshO"
            shape="circle"
            size="small"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq ewSiVL"
            shape="circle"
            size="small"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq kNHYPr"
            shape="circle"
            size="small"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq hQkxFc"
            shape="rounded"
            size="small"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq vAGWO"
            shape="rounded"
            size="small"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq cEVsfo"
            shape="rounded"
            size="small"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq lbjmpl"
            shape="rounded"
            size="small"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq hnHlYv"
            shape="square"
            size="medium"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq faLXns"
            shape="square"
            size="medium"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq fslcjo"
            shape="square"
            size="medium"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq cphiYj"
            shape="square"
            size="medium"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq hwuhws"
            shape="circle"
            size="medium"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq jGGOpc"
            shape="circle"
            size="medium"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq dbHIDJ"
            shape="circle"
            size="medium"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq ffnYyY"
            shape="circle"
            size="medium"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq gkmYtt"
            shape="rounded"
            size="medium"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq iNVMlw"
            shape="rounded"
            size="medium"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq bxIiSg"
            shape="rounded"
            size="medium"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq ccdqQA"
            shape="rounded"
            size="medium"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq iuiGVY"
            shape="square"
            size="large"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq HFFYW"
            shape="square"
            size="large"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq bekTBQ"
            shape="square"
            size="large"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq jQkcJk"
            shape="square"
            size="large"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq kVsyME"
            shape="circle"
            size="large"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq eJSoys"
            shape="circle"
            size="large"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq jhtozw"
            shape="circle"
            size="large"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq jPfbST"
            shape="circle"
            size="large"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq bEmVKe"
            shape="rounded"
            size="large"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq eiDydh"
            shape="rounded"
            size="large"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq hXwVLX"
            shape="rounded"
            size="large"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <img
            className="sc-dnqmqq guACEr"
            shape="rounded"
            size="large"
            src="https://placehold.it/192/ccc/606060&&text=G"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Input
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Input
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Modal
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Modal
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Row Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Row
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Row Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Row
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Tag
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Tag
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Text
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Text
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextArea Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    TextArea
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextArea Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    TextArea
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Toggle
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Toggle
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa cvqqop"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Typography Font Families 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Typography
      →  
    Font Families
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div
        className="sc-kpOJdX jxvEiG"
      >
        <h3
          style={
            Object {
              "fontFamily": "monospace",
              "fontSize": 24,
              "padding": 12,
            }
          }
        >
          Poppins
        </h3>
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe ihAjzJ"
            size={64}
            style={undefined}
          >
            Aa
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Regular - 400
          </div>
        </div>
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe gpZTAJ"
            size={64}
            style={undefined}
          >
            Aa
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Medium - 500
          </div>
        </div>
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe bzpnRQ"
            size={64}
            style={undefined}
          >
            Aa
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Semi-Bold - 600
          </div>
        </div>
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe gdalMF"
            size={64}
            style={undefined}
          >
            Aa
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Bold - 700
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Typography Font Leading 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Typography
      →  
    Font Leading
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div
        className="sc-kpOJdX jxvEiG"
      >
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe iZfOgT"
            size={16}
            style={
              Object {
                "maxWidth": 240,
                "padding": "0px 10px",
              }
            }
          >
            Paradigm shift analytics traction twitter business to consumer influencer growth hacking focus.
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Extra Small - 18px
          </div>
        </div>
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe iZfOgT"
            size={16}
            style={
              Object {
                "maxWidth": 240,
                "padding": "0px 10px",
              }
            }
          >
            Paradigm shift analytics traction twitter business to consumer influencer growth hacking focus.
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Small - 20px
          </div>
        </div>
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe ccnRTD"
            size={16}
            style={
              Object {
                "maxWidth": 240,
                "padding": "0px 10px",
              }
            }
          >
            Paradigm shift analytics traction twitter business to consumer influencer growth hacking focus.
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Medium - 24px
          </div>
        </div>
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe cvRJGe"
            size={16}
            style={
              Object {
                "maxWidth": 240,
                "padding": "0px 10px",
              }
            }
          >
            Paradigm shift analytics traction twitter business to consumer influencer growth hacking focus.
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Large - 30px
          </div>
        </div>
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe hFummY"
            size={16}
            style={
              Object {
                "maxWidth": 240,
                "padding": "0px 10px",
              }
            }
          >
            Paradigm shift analytics traction twitter business to consumer influencer growth hacking focus.
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Extra Large - 36px
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Typography Font Sizes 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Typography
      →  
    Font Sizes
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div
        className="sc-kpOJdX jxvEiG"
      >
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe bHZmAp"
            size={12}
            style={undefined}
          >
            Aa
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Extra Small - 12px
          </div>
        </div>
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe hEDEqj"
            size={14}
            style={undefined}
          >
            Aa
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Small - 14px
          </div>
        </div>
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe cVVWZK"
            size={16}
            style={undefined}
          >
            Aa
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Medium - 16px
          </div>
        </div>
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe ewnJiV"
            size={24}
            style={undefined}
          >
            Aa
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Large - 24px
          </div>
        </div>
        <div
          className="sc-dxgOiQ hMXqdh"
        >
          <div
            className="sc-jKJlTe jopjx"
            size={30}
            style={undefined}
          >
            Aa
          </div>
          <div
            className="sc-ckVGcZ dqwpuc"
          >
            Extra Large - 30px
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
